Table column text wrapping fix

--- a/css/panel.css
+++ b/css/panel.css
@@ -7,3 +7,9 @@
 {
     resize: vertical;
 }
+
+.textwrap
+{
+    table-layout: fixed;
+    word-wrap: break-word;
+}
